# Aimelia

./: .gitignore  README.md  WARP.md  debug_auth_system.py  render.yaml  setup_real_auth.py  test_auth.py  test_auth_flow.py  test_auth_simple.sh  test_auth_working.sh  test_callback.py  test_callback_simple.sh  test_callback_working.sh  vercel.json
frontend/: README.md  deploy.sh  env.example  next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Analytics.tsx  AuthError.tsx  AuthSuccess.tsx  CalendarView.tsx  EmailTriage.tsx  EnhancedAI.tsx  Header.tsx  MeetingBriefs.tsx  (+4 more)
ws-aimelia/: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  render.yaml  requirements.txt  vercel.json
ws-aimelia/apps/api/: Dockerfile  ENHANCED_FEATURES.md  OPENAI_SETUP.md  TOKEN_MANAGEMENT.md  deploy_enhanced.sh  generate_encryption_key.py  generate_key.py  migrate.py  migrate_knowledge_base.py  pyproject.toml  requirements.txt  test_ai.py
ws-aimelia/apps/api/app/: ai_service.py  aimelia_scheduler.py  auth_switch.py  briefs.py  calendar.py  context_builder.py  db.py  debug_auth.py  enhanced_endpoints.py  fewshots.py  graph_auth.py  knowledge_base.py  main.py  meeting_prep.py  meeting_prep_endpoints.py  minimal_auth.py  models.py  outlook.py  scheduler.py  scheduler_endpoints.py  settings.py  setup.py  simple_enhanced.py  smart_drafting.py  smart_drafting_endpoints.py  teams.py  test_env.py  token_manager.py  triage.py  utils.py
ws-aimelia/apps/api/app/persona/: tom_profile.md
(+3 files in other folders)
