[project]
name = "aimelia-api"
version = "0.1.0"
description = "Aimelia – Microsoft-first AI PA API"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "python-dotenv",
  "sqlalchemy>=2",
  "psycopg[binary]",
  "apscheduler",
  "httpx",
  "itsdangerous",
  "cryptography",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000